# network-intel

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  HANDOFF.md  Makefile  README.md  ecosystem.config.cjs
apps/api/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
apps/api/config/: industry_feeds.txt
apps/api/infra/davmail/: .gitignore  README.md  bootstrap-auth.sh  davmail.properties  fetch-davmail.sh  run-davmail.sh
apps/api/knowledge/: glossary.md
apps/api/knowledge/competitors/: unifi_lineup.md
apps/api/prompts/: admin_edit.md  brand_filter.md  classify.md  curate_daily.md  curate_weekly.md  pains.md  shortlist.md
apps/api/prompts/research/: chip.md  competitor.md  conference.md  market.md  protocol.md  structure.md  supply_chain.md
apps/api/prompts/variants/: README.md
apps/api/scripts/: regen_real.py  regen_synth.py  run_pipeline.sh
apps/api/src/nintel/: __init__.py  config.py  contract.py  pipeline.py
apps/api/src/nintel/api/: __init__.py  admin.py  app.py  repository.py
apps/api/src/nintel/connectors/: __init__.py  base.py  gemini_research.py  (+4 more)
apps/api/tests/: conftest.py  test_admin.py  test_api.py  test_brand.py  test_connectors_industry.py  test_connectors_live.py  test_connectors_review.py  test_contract.py  test_contract_lock.py  test_embeddings.py  test_gbrain.py  test_mail_config.py  test_mailer.py  test_pains.py  test_pipeline.py  test_rag.py  test_recent_coverage.py  test_regen_script.py  test_render.py  test_select.py  test_state.py  test_subscription.py  test_trend.py
apps/api/tests/eval/: test_prompt_eval.py
(+124 files in other folders)
