[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nintel"
version = "1.3.0"
description = "Network Intel (nintel) — competitive & sentiment intelligence engine + REST API"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary — internal TP-Link tooling" }
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "sqlalchemy==2.0.36",
    "pydantic==2.10.4",
    "jinja2==3.1.5",
    "jsonschema==4.23.0",
    "python-dotenv==1.0.1",
]

[project.optional-dependencies]
llm = ["anthropic==0.42.0"]
# RAG vector knowledge base. sqlite-vec is small + needed by the test suite;
# fastembed (ONNX, ~130MB model on first run) is only used when
# NINTEL_EMBEDDER=fastembed, so it stays out of [dev]/CI.
rag = ["sqlite-vec==0.1.6", "fastembed==0.3.6"]
# Live upstream clients — only needed for NINTEL_CONNECTOR_MODE=live (per source).
live = ["supabase==2.10.0", "notion-client==2.2.1", "feedparser==6.0.11"]
dev = [
    "pytest==8.3.4",
    "httpx==0.28.1",
    "sqlite-vec==0.1.6",
]

[project.scripts]
nintel = "nintel.pipeline:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nintel = ["templates/*.j2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
